# flow-code

./: .editorconfig  .flow  .gitignore  .markdownlint.json  .mcp.json  CHANGELOG.md  CLAUDE.md  CLAUDE.md.upstream  README.md  README_CN.md  TODOS.md
flowctl/: .flow  .gitignore  Cargo.toml  README.md  dist-workspace.toml  install.sh
flowctl/crates/flowctl-cli/: Cargo.toml
flowctl/crates/flowctl-cli/src/: diagnostics.rs  main.rs  output.rs
flowctl/crates/flowctl-cli/src/commands/: admin.rs  approval.rs  checklist.rs  checkpoint.rs  code_structure.rs  codex.rs  db_shim.rs  dep.rs  edit.rs  epic.rs  file.rs  find.rs  gap.rs  graph.rs  helpers.rs  hook.rs  index.rs  log.rs  mcp.rs  memory.rs  mod.rs  outputs.rs  patch.rs  paths.rs  plan_depth.rs  pre_launch.rs  project_context.rs  query.rs  ralph.rs  recover.rs  repo_map.rs  rp.rs  scout_cache.rs  search.rs  skill.rs  stack.rs  stats.rs  task.rs  workflow.rs
flowctl/crates/flowctl-cli/src/commands/admin/: config.rs  exchange.rs  guard.rs  init.rs  mod.rs  review.rs  status.rs
flowctl/crates/flowctl-cli/src/commands/codex/: mod.rs  review.rs  sync.rs
flowctl/crates/flowctl-cli/src/commands/epic/: audit.rs  crud.rs  deps.rs  helpers.rs  history.rs  lifecycle.rs  mod.rs  types.rs
flowctl/crates/flowctl-cli/src/commands/hook/: auto_memory.rs  commit_gate.rs  (+5 more)
flowctl/crates/flowctl-cli/tests/: approval_test.rs  cli_tests.rs  doctor_test.rs  dry_run_test.rs  export_import_test.rs  integration_test.rs  log_test.rs  outputs_test.rs  parity_test.rs
flowctl/crates/flowctl-core/: Cargo.toml
flowctl/crates/flowctl-core/src/: approvals.rs  changes.rs  code_structure.rs  codex_sync.rs  compress.rs  config.rs  dag.rs  error.rs  events.rs  frecency.rs  frontmatter.rs  fs_utils.rs  fuzzy.rs  graph_store.rs  id.rs  json_store.rs  lib.rs  lifecycle.rs  locks.rs  ngram_index.rs  outputs.rs  patch.rs  paths.rs  pipeline.rs  project_context.rs  repo_map.rs  review_protocol.rs  state_machine.rs  task_profile.rs  types.rs
flowctl/crates/flowctl-core/src/context/: mod.rs
flowctl/crates/flowctl-core/src/domain/: action_spec.rs  escalation.rs  goal.rs  mod.rs  node.rs  plan.rs
flowctl/crates/flowctl-core/src/engine/: escalation.rs  goal_engine.rs  mod.rs  orchestrator.rs  planner.rs  scheduler.rs
flowctl/crates/flowctl-core/src/filters/: cat.toml  dag.toml  epics.toml  files.toml  gap.toml  guard.toml  hook_precompact.toml  hook_subagent.toml  memory.toml  ready.toml  show.toml  status.toml  tasks.toml
flowctl/crates/flowctl-core/src/knowledge/: learner.rs  mod.rs  types.rs
flowctl/crates/flowctl-core/src/provider/: mod.rs
flowctl/crates/flowctl-core/src/quality/: guard_runner.rs  mod.rs  policy.rs
flowctl/crates/flowctl-core/src/storage/: attempt_store.rs  event_store.rs  goal_store.rs  knowledge_store.rs  mod.rs  plan_store.rs
flowctl/crates/flowctl-daemon/: Cargo.toml
flowctl/crates/flowctl-daemon/src/: handlers.rs  lib.rs  lifecycle.rs  notifications.rs  server.rs
flowctl/crates/flowctl-daemon/src/handlers/: approvals.rs  common.rs  dag.rs  epic.rs  mod.rs  task.rs  ws.rs
flowctl/crates/flowctl-db/: Cargo.toml
flowctl/crates/flowctl-db-lsql/: Cargo.toml
flowctl/crates/flowctl-db-lsql/src/: lib.rs  metrics.rs  pool.rs  repo.rs
flowctl/crates/flowctl-db/benches/: event_store.rs
flowctl/crates/flowctl-db/src/: approvals.rs  error.rs  events.rs  gaps.rs  indexer.rs  lib.rs  locks.rs  memory.rs  metrics.rs  migration.rs  phases.rs  pipeline.rs  pool.rs  pool_async.rs  repo.rs  schema.sql  schema_libsql.sql  skill.rs  store.rs  sync.rs
flowctl/crates/flowctl-db/src/repo/: deps.rs  epic.rs  event.rs  event_store.rs  evidence.rs  file_lock.rs  file_ownership.rs  gap.rs  helpers.rs  mod.rs  phase_progress.rs  runtime.rs  scout_cache.rs  task.rs
flowctl/crates/flowctl-mcp/: Cargo.toml
flowctl/crates/flowctl-mcp/src/: lib.rs  server.rs
flowctl/crates/flowctl-scheduler/: Cargo.toml
flowctl/crates/flowctl-scheduler/src/: circuit_breaker.rs  event_bus.rs  lib.rs  scheduler.rs  watchdog.rs  watcher.rs
flowctl/crates/flowctl-service/: Cargo.toml
flowctl/crates/flowctl-service/src/: approvals.rs  changes.rs  connection.rs  error.rs  lib.rs  lifecycle.rs  outputs.rs
flowctl/crates/flowctl-tui/: Cargo.toml
flowctl/crates/flowctl-tui/src/: action.rs  app.rs  component.rs  lib.rs  ws_client.rs
flowctl/crates/flowctl-tui/src/tabs/: dag.rs  logs.rs  mod.rs  stats.rs  tasks.rs
flowctl/crates/flowctl-tui/src/widgets/: mod.rs  toast.rs
flowctl/crates/flowctl-tui/tests/: snapshot_tests.rs
flowctl/crates/flowctl-tui/tests/snapshots/: snapshot_tests__app_default.snap  snapshot_tests__logs_tab_empty.snap  snapshot_tests__logs_tab_with_events.snap  snapshot_tests__stats_tab_empty.snap  snapshot_tests__stats_tab_with_data.snap  snapshot_tests__tasks_tab_empty.snap  snapshot_tests__tasks_tab_with_data.snap  snapshot_tests__toast_stack.snap
flowctl/crates/flowctl-web/: Cargo.toml
flowctl/crates/flowctl-web/src/: api.rs  app.rs  lib.rs
flowctl/crates/flowctl-web/src/components/: dag_graph.rs  forms.rs  mod.rs  progress_bar.rs  status_badge.rs  toast.rs  token_chart.rs
flowctl/crates/flowctl-web/src/pages/: agents.rs  dag_view.rs  dashboard.rs  epic_detail.rs  memory.rs  mod.rs  replay.rs  settings.rs
flowctl/crates/flowctl-web/style/: main.css
flowctl/tests/cmd/: block_json.toml  block_missing_args.toml  cat_json.toml  cat_missing_arg.toml  config_get_json.toml  config_get_missing_key.toml  dep_add_json.toml  dep_add_missing_args.toml  done_json.toml  done_missing_arg.toml  epic_create_json.toml  epic_create_missing_title.toml  help.toml  init_json.toml  init_plain.toml  invalid_subcommand.toml  mcp_initialize.toml  mcp_tools_list.toml  next_json.toml  no_subcommand.toml  ready_json.toml  ready_missing_epic.toml  restart_json.toml  restart_missing_arg.toml  show_json.toml  show_missing_arg.toml  start_json.toml  start_missing_arg.toml  status_json.toml  status_plain.toml  task_create_json.toml  task_create_missing_args.toml  validate_json.toml  version.toml
flowctl/tests/integration/: compare_outputs.sh
(+507 files in other folders)
