[workspace]
resolver = "2"
members = [
    "crates/flowctl-core",
    "crates/flowctl-db",
    "crates/flowctl-service",
    "crates/flowctl-cli",
]

# ── Shared package metadata (nushell convention) ──────────────────────
[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/z23cc/flow-code"

# ── Shared dependencies (nushell convention) ──────────────────────────
# Define all deps once here; crates reference via `dep.workspace = true`
[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Regex
regex = "1"

# Hashing
sha2 = "0.10"

# Logging
tracing = "0.1"

# DAG
petgraph = "0.7"

# libSQL (async, native vectors) — the DB engine
libsql = { version = "0.9", default-features = false, features = ["core"] }

# AI embeddings (memory semantic search)
# Use rustls to avoid OpenSSL cross-compile headaches on release builds.
fastembed = { version = "5.12", default-features = false, features = [
    "ort-download-binaries-rustls-tls",
    "hf-hub-rustls-tls",
] }

# CLI (cli crate)
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
miette = { version = "7", features = ["fancy"] }

# Async runtime (service layer)
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Unix process management
nix = { version = "0.30", features = ["signal", "process"] }

# Path lookup
which = "8"

# Testing
trycmd = "0.15"

# Internal crate references
flowctl-core = { path = "crates/flowctl-core" }
flowctl-db = { path = "crates/flowctl-db" }
flowctl-service = { path = "crates/flowctl-service" }

# ── Release profile (size-optimized) ─────────────────────────────────
[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

