[workspace]
resolver = "2"
members = [
    "crates/flowctl-core",
    "crates/flowctl-cli",
]

# ── Shared package metadata (nushell convention) ──────────────────────
[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/z23cc/flow-code"

# ── Shared dependencies (nushell convention) ──────────────────────────
# Define all deps once here; crates reference via `dep.workspace = true`
[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Regex
regex = "1"

# File locking
fs2 = "0.4"

# Hashing
sha2 = "0.10"

# Logging
tracing = "0.1"

# DAG
petgraph = "0.7"

# Fuzzy search
nucleo-matcher = "0.3"
ignore = "0.4"

# Fuzzy diff/patch
fudiff = "0.2"

# Binary serialization (N-gram index)
bincode = { version = "2", features = ["serde"] }

# Fast byte search
memchr = "2"

# Regex AST (trigram extraction from regex patterns)
regex-syntax = "0.8"

# CLI (cli crate)
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
miette = { version = "7", features = ["fancy"] }

# Unix process management
nix = { version = "0.30", features = ["signal", "process"] }

# Path lookup
which = "8"

# Testing
trycmd = "0.15"

# Internal crate references
flowctl-core = { path = "crates/flowctl-core" }

# ── Shared lint configuration ────────────────────────────────────────
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
redundant_closure_for_method_calls = "warn"
unsafe_code = "forbid"
# CLI handlers receive owned Strings from clap; suppress pass-by-value noise
needless_pass_by_value = "allow"

# ── Release profile (size-optimized) ─────────────────────────────────
[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

