[package]
name = "flowctl-cli"
version = "0.1.53"
description = "CLI entry point for flowctl"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "flowctl"
path = "src/main.rs"

[dependencies]
flowctl-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
which = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
trycmd = { workspace = true }
tempfile = "3"
serde_json = { workspace = true }
flowctl-core = { workspace = true }
