[package]
name = "flowctl-cli"
version = "0.4.0"
description = "CLI entry point for flowctl V4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "flowctl"
path = "src/main.rs"

[dependencies]
flowctl-core = { workspace = true }
flowctl-mcp = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }

[lints]
workspace = true
