[package]
name = "flowctl-core"
version = "0.1.0"
description = "Core types, ID parsing, and state machine for flowctl"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde-saphyr = "0.0.23"
thiserror = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
petgraph = { workspace = true }

[dev-dependencies]
