[package]
name = "flowctl-core"
version = "0.1.0"
description = "Core types, ID parsing, and state machine for flowctl (includes Apache 2.0 licensed code ported from rtk)"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde-saphyr = "0.0.23"
thiserror = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
petgraph = { workspace = true }
fs2 = { workspace = true }
nucleo-matcher = { workspace = true }
ignore = { workspace = true }
toml = "0.8"
fudiff = { workspace = true }
bincode = { workspace = true }
memchr = { workspace = true }
regex-syntax = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
