[package]
name = "flowctl-core"
version = "0.4.0"
description = "Core engine for flowctl V4 — goal-driven adaptive development"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
fs2 = { workspace = true }
ignore = { workspace = true }
bincode = { workspace = true }
memchr = { workspace = true }
regex-syntax = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
