[package]
name = "flowctl-daemon"
version = "0.1.0"
description = "Daemon process for flowctl (scheduler, watcher, HTTP API)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
flowctl-core = { workspace = true }
flowctl-db = { workspace = true }
flowctl-scheduler = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
notify = { workspace = true }
nix = { workspace = true }
