[package]
name = "flowctl-daemon"
version = "0.1.0"
description = "Daemon process for flowctl (scheduler, watcher, HTTP API)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
daemon = [
    "dep:tokio",
    "dep:tokio-util",
    "dep:axum",
    "dep:tower-http",
    "dep:nix",
]

[dependencies]
flowctl-core = { workspace = true }
flowctl-db = { workspace = true }
flowctl-scheduler = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
notify = { workspace = true }

# Daemon-only deps (feature-gated)
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
nix = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
tokio-util = { workspace = true }
hyper = "1"
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
http-body-util = "0.1"
bytes = "1"
