[package]
name = "flowctl-db"
version = "0.1.0"
description = "SQLite storage layer for flowctl"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
flowctl-core = { workspace = true }
rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }
include_dir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
