[package]
name = "flowctl-db"
version = "0.1.0"
description = "Async libSQL storage layer for flowctl (successor to flowctl-db)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
flowctl-core = { workspace = true }
libsql = { workspace = true }
tokio = { workspace = true }
fastembed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
