[package]
name = "flowctl-db"
version = "0.1.0"
description = "Sync file-based storage layer for flowctl"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
flowctl-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
