[package]
name = "flowctl-service"
version = "0.1.0"
description = "Business logic service layer for flowctl — unifies CLI, daemon, and MCP execution paths"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
flowctl-core = { workspace = true }
flowctl-db = { workspace = true }
libsql = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
