[package]
name = "flowctl-tui"
version = "0.1.0"
description = "TUI dashboard for flowctl"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
flowctl-core = { workspace = true }
flowctl-db = { workspace = true }
flowctl-scheduler = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
nucleo = { workspace = true }

[dev-dependencies]
insta = "1"
