[package]
name = "flowctl-web"
version = "0.1.0"
description = "Leptos web frontend for flowctl platform"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8", features = [] }
leptos_router = { version = "0.8", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }

# Client-side only
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
gloo-net = { version = "0.6", optional = true }

# Server-side only
leptos_axum = { version = "0.8", optional = true }
tokio = { workspace = true, optional = true }

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
    "dep:gloo-net",
]
ssr = [
    "leptos/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:tokio",
]
